--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Open Sans', sans-serif;
     padding: 0.5rem 1rem;
     color: #555555;
+    display: flex;
+    height: calc(100vh - 1rem);
+    width: calc(100vw - 2rem);
+    overflow: hidden;
+    flex-direction: column;
 }
 
 h1 {
@@ -33,7 +38,7 @@ ul li {
 }
 
 ul li:hover {
-    background-color: rgba(85, 85, 85, 0.05);
+    background-color: rgba(85, 85, 85, 0.1);
 }
 
 ul li h3 {
@@ -42,4 +47,42 @@ ul li h3 {
 
 a {
     color: inherit;
+}
+
+.passwordProtected {
+    display: none;
+}
+
+.passwordBox {
+    margin: auto;
+    width: 50%;
+    max-width: 453.6px;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 8px;
+    text-align: center;
+    padding: 2rem 1rem;
+    color: white;
+}
+
+.passwordBox h2 {
+    margin: 0 0 1.25rem 0;
+}
+
+.passwordBox button {
+    display: block;
+    margin: auto;
+    background-color: #55a968;
+    border: none;
+    color: white;
+    border-radius: 8px;
+    padding: 0.75rem 1.25rem;
+    font-family: inherit;
+}
+
+.passwordBox input {
+    padding: 0.75rem 1rem;
+    border-radius: 8px;
+    border-style: none;
+    margin-bottom: 1rem;
+    width: 70%;
 }
