--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
     color: #555555;
     display: flex;
     height: calc(100vh - 1rem);
-    width: calc(100vw - 2rem);
-    overflow: hidden;
+    width: calc(100% - 2rem);
+    overflow-x: hidden;
     flex-direction: column;
+    margin: 0;
 }
 
 h1 {
