--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,22 @@ div.collapsing .body {
   margin-bottom: 6rem;
 }
 
+.sponsor-logos {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 975px;
+}
+
+.sponsor-logos a {
+  margin: 0 auto 1rem auto;
+  display: flex;
+  width: 220px;
+}
+
+.sponsor-logos a img {
+  margin: auto;
+}
+
 nav.navbar {
   width: 100%;
   z-index: 2;
@@ -408,38 +424,4 @@ ul li h3 {
 
 a {
   color: inherit;
-}
-
-.passwordBox {
-  margin: auto;
-  width: 50%;
-  max-width: 453.6px;
-  background-color: rgba(0,0,0,0.5);
-  border-radius: 8px;
-  text-align: center;
-  padding: 2rem 1rem;
-  color: white;
-}
-
-.passwordBox h2 {
-  margin: 0 0 1.25rem 0;
-}
-
-.passwordBox button {
-  display: block;
-  margin: auto;
-  background-color: #55a968;
-  border: none;
-  color: white;
-  border-radius: 8px;
-  padding: 0.75rem 1.25rem;
-  font-family: inherit;
-}
-
-.passwordBox input {
-  padding: 0.75rem 1rem;
-  border-radius: 8px;
-  border-style: none;
-  margin-bottom: 1rem;
-  width: 70%;
 }
