--- a/css/styles.css
+++ b/css/styles.css
@@ -117,13 +117,6 @@ body > div > div > *:last-child {
   margin: 0 auto;
 }
 
-@media (max-width: 485px) {
-  #todopage h4 {
-    font-size: 16px;
-    width: 100%;
-  }
-}
-
 #todopage h4 span {
   color: #E43883;
 }
@@ -135,7 +128,7 @@ body > div > div > *:last-child {
 }
 
 #todopage .buttons {
-  width: 225px;
+  width: 200px;
   margin-top: 2rem;
 }
 
@@ -228,16 +221,11 @@ div.collapsing .body {
   #faqpage .question {
     margin-right: 1rem;
   }
+}
 
-  #faqpage .question,
-  #faqs div i {
-    font-size: 14px;
-  }
-
-  div.collapse .body,
-  div.collapsing .body {
-    font-size: 12px;
-  }
+#newsletterspage > div {
+  width: 700px;
+  text-align: center;
 }
 
 #newsletterspage > div,
@@ -400,10 +388,6 @@ hr {
   margin-right: 0.5rem;
 }
 
-ul {
-  list-style: none;
-  padding-left: 0;
-}
 
 ul li:not(.nav-item):first-child {
   padding: 0.25rem 0 0.125rem 0;
